<resources>
    <string name="app_name">Top Gold</string>
    <string name="oil_on">OIL ON</string>
    <string name="oil_off">OIL OFF</string>
    <string name="status">STATUS</string>
    <string name="address">ADDRESS</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="about_us">About Us</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_pass">Vehicle Pass</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="save">Save</string>
    <string name="vehicle_updated">Vehicle updated</string>
    <string name="number_required">Please enter vehicle number</string>
    <string name="pass_required">Please enter vehicle pass</string>
    <string name="name_required">Please enter vehicle name</string>
    <string name="tracker">TRACKER</string>
    <string name="monitor">MONITOR</string>
    <string name="call">CALL</string>
    <string name="reboot">REBOOT</string>
    <string name="acc_on">ACC ON</string>
    <string name="acc_off">ACC OFF</string>
    <string name="elec_start">ELEC START</string>
    <string name="elec_stop">ELEC STOP</string>
    <string name="speed">SPEED</string>
    <string name="stop_speed">STOP SPEED</string>
    <string name="password">PASSWORD</string>
    <string name="timezone">TIMEZONE</string>
    <string name="kmh">KMH</string>
    <string name="send_to_device">Send To device</string>
    <string name="speed_error">Speed should only be in numbers</string>
    <string name="speed_empty">Please enter speed</string>
    <string name="message_sent_success">Message sent successfully, please wait for reply</string>
    <string name="speed_negative_error">Speed should be positive</string>
    <string name="new_password">New</string>
    <string name="password_empty">Please enter new password</string>
    <string name="we">W/E</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="weekend_empty">Please enter weekend</string>
    <string name="hours_empty">hours_empty</string>
    <string name="minutes_empty">Please enter minutes</string>
    <string name="hours_invalid">Hours should be numbers only</string>
    <string name="minutes_invalid">Minutes should be numeric only</string>
    <string name="hours_negative">Hours should be positive</string>
    <string name="minutes_negative">Minutes should only be positive</string>
    <string name="contacts">Contacts</string>
    <string name="device_replied">Device replied successfully</string>
    <string name="vehicle_deleted">Vehicle deleted successfully</string>
    <string name="message_sent_successfully">Message sent successfully, please wait for reply</string>
    <string name="permissions_denied">Permission denied</string>
    <string name="begin">BEGIN</string>
    <string name="admin">ADMIN</string>
    <string name="phone_1">Phone number 1</string>
    <string name="phone_2">Phone number 2</string>
    <string name="phone_3">Phone number 3</string>
    <string name="phone_4">Phone number 4</string>
    <string name="phone_1_error">Phone 1 can\'t be empty</string>
    <string name="functionality">Functionality</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
</resources>
