<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPhone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPhone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_2"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPhone3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_3"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPhone4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPhone4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_4"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSend"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        android:textColor="@color/white"
        android:text="@string/send_to_device"/>
</LinearLayout>