<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/vehicle_number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnContacts"
            android:layout_width="120dp"
            style="@style/Button"
            android:text="@string/contacts"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/vehicle_pass"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/vehicle_name"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:checked="true"
        android:clickable="false"
        android:text="MG236"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:checked="false"
        android:enabled="false"
        android:clickable="false"
        android:text="MG237"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        android:text="@string/save"/>
</LinearLayout>