<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarStyle"
        app:titleTextAppearance="@style/AppTheme.Toolbar.Title">

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_marginEnd="@dimen/content_margin_large"/>

    </android.support.v7.widget.Toolbar>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        android:layout_marginTop="@dimen/content_margin_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        android:orientation="horizontal"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7">

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/vehicle_number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnContacts"
            android:layout_width="120dp"
            style="@style/Button"
            android:text="@string/contacts"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/vehicle_pass"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_margin_large"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/vehicle_name"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:layout_marginStart="@dimen/content_margin_large"
        android:layout_marginEnd="@dimen/content_margin_large"
        style="@style/Button"
        android:text="@string/save"/>
</LinearLayout>